# week3-ml-baseline-system

./: .gitignore  pyproject.toml
reports/: model_card.md
src/ml_baseline/: cli.py  config.py  library.py  main.py  metrics.py  pipeline.py  splits.py  train.py
tests/: test_logic.py
